--- a/upload/admin/view/template/extension/module/digital_catalog.twig
+++ b/upload/admin/view/template/extension/module/digital_catalog.twig
@@ -43,7 +43,7 @@
 
 
 					<div class="form-group">
-						<label class="col-sm-2 control-label" for="input-image-limit">تعداد تصاویر </label>
+						<label class="col-sm-2 control-label" for="input-image-limit"> {{ entry_image_limit }}	</label>
 						<div class="col-sm-10">
 							<input type="number" name="digital_catalog_image_limit" value="{{ digital_catalog_image_limit }}" min="1" id="input-image-limit" class="form-control"/>
 						</div>
@@ -119,7 +119,7 @@
 							<input type="checkbox" name="digital_catalog_show_sku" id="input-show-sku" value="1" {% if digital_catalog_show_sku %} checked="checked" {% endif %}/>
 						</div>
 					</div>
-					
+
 					<div class="form-group">
 						<label class="col-sm-2 control-label" for="input-show-qrcode">{{ entry_show_qrcode }}</label>
 						<div class="col-sm-10">
