--- a/upload/catalog/view/theme/default/stylesheet/digital_catalog/css/digital_catalog.css
+++ b/upload/catalog/view/theme/default/stylesheet/digital_catalog/css/digital_catalog.css
@@ -351,12 +351,9 @@ span.item {
     text-align: center;
 }
 #pdf-loading-overlay .loading-text {
-    position: absolute;
-    top: 47%; 
-    left: 50%;
-    transform: translate(-50%, -50%);
     color: #fff;
     font-size: 18px;
+    font-weight: bold;
 }
 body.lock-scroll {
     overflow: hidden; 
@@ -384,12 +381,6 @@ body.lock-scroll {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.loading-text {
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 15px;
-}
-
 .progress-bar-container {
     width: 250px;
     height: 20px;
@@ -407,13 +398,24 @@ body.lock-scroll {
     background-color: #4CAF50; 
     transition: width 0.3s ease;
 }
-
-.progress-percentage {
+.overlay-back {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    background-color: #c9a35c;
+    width: 30%;
+    height: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.progress-percentage {
     font-size: 12px;
     font-weight: bold;
     color: #333;
+    position: relative;
+    bottom: 100%;
 }
