--- a/upload/catalog/view/theme/default/template/extension/module/digital_catalog/generate_product_list_by_category.twig
+++ b/upload/catalog/view/theme/default/template/extension/module/digital_catalog/generate_product_list_by_category.twig
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>{{heading_title}}</title>
 		<meta name="viewport" content="width=21cm, initial-scale=1">
-		<link rel="stylesheet" href="{{ base }}catalog/view/theme/default/stylesheet/digital_catalog/css/digital_catalog.css"/>
+		<link rel="stylesheet" href="{{ base }}catalog/view/theme/default/stylesheet/digital_catalog/css/digital_catalog.css?v={{ direction }}"/>
 	</head>
 	<body class="lang-{{ direction }}" lang="{{ language_code }}" >
 		<!--loading-->
@@ -112,14 +112,14 @@
 							</div>
 						{% endif %}
 
-						<div class="last-section">
+						<div class="last-section" dir="{{direction}}">
 							{% if show_description %}
 								<div class="description_section description" dir="{{ direction }}">
 									<span>{{ product_data.description|raw }}</span>
 								</div>
 							{% endif %}
 							<div class="description_section detail">
-								<div class="section_1">
+								<div class="section_1 {{ direction == 'rtl' ? 'rtl' : 'ltr' }}">
 									{% if show_qrcode %}
 										<img src="{{ product_data.qrcode }}" alt="QR Code محصول {{ product_data.product.name }}" class="qr">
 									{% endif %}
@@ -127,7 +127,7 @@
 									<ul class="contact">
 										{% if show_address %}
 											<li>
-												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewbox="0 0 16 16">
+												<svg xmlns="http://www.w3.org/2000/svg" width="20" height="16" viewbox="0 0 16 16">
 													<path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/><path d="m8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
 												</svg>
 												<span>{{ store_address }}</span>
